--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     var chartData = {
       type: "bar",  // Specify your chart type here.
       title: {
-        text: "My First Chart" // Adds a title to your chart
+        text: "Public Archaeology" // Adds a title to your chart
       },
       legend: {}, // Creates an interactive legend
       series: [  // Insert your series data here.
