--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       },
       legend: {}, // Creates an interactive legend
       series: [  // Insert your series data here.
-          { values: [35, 42, 67, 89]},
-          { values: [28, 40, 39, 36]}
+          { values: [100]},
+          { values: [1]}
       ]
     };
     zingchart.render({ // Render Method[3]
