--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     var chartData = {
       type: "bar",  // Specify your chart type here.
       title: {
-        text: "Public Archaeology" // Adds a title to your chart
+        text: "Public Archaeology's Effectiveness" // Adds a title to your chart
       },
       series: [  // Insert your series data here.
           { values: [100]},
@@ -23,7 +23,7 @@
       id: "chartDiv",
       data: chartData,
       height: 400,
-      width: 300
+      width: 400
     });
   </script>
 </body>
