--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         text: "Public Archaeology's Effectiveness" // Adds a title to your chart
       },
       series: [  // Insert your series data here.
-          { values: [100] With Visualisation},
-          { values: [1] Without Visualisation}
+          { values: [100]},
+          { values: [1]}
       ]
     };
     zingchart.render({ // Render Method[3]
