--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         text: "Public Archaeology's Effectiveness" // Adds a title to your chart
       },
       series: [  // Insert your series data here.
-          { values: [100 With Visualisation]},
+          { values: [100]},
           { values: [1]}
       ]
     };
