--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       type: "bar",  // Specify your chart type here.
       title: {
         text: "Public Archaeology's Effectiveness" // Adds a title to your chart
-      },
+      }, WithVisualisation
       series: [  // Insert your series data here.
           { values: [100]},
           { values: [1]}
