--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     var chartData = {
       type: "bar",  // Specify your chart type here.
       title: {
-        text: "Public Archaeology's Effectiveness With Visualisation Without Visualisation" // Adds a title to your chart
+        text: "Public Archaeology's Effectiveness"
+        "With Visualisation   Without Visualisation" // Adds a title to your chart
       }, 
       series: [  // Insert your series data here.
           { values: [100]},
